content and image updates
- spacer bars to visually break up sections
- image samples of Helium app migration flow
- removed over zealous cross links
- app mockup images
- reorg image files, optimzed file sizes

--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -26,6 +26,8 @@ phases, with transactions being moved to the Helium Wallet app and Hotspot maint
 The sections below provide more information about the different Wallets and what can be expected as
 part of the blockchain migration.
 
+---
+
 ## Hotspots on Solana
 
 - Hotspots will move to the new Solana blockchain, specifically performing off-chain
@@ -40,8 +42,8 @@ part of the blockchain migration.
 ### Hotspots Will Earn IOT
 
 Hotspot Owners will start earning IOT as the blockchain migration will launch the IOT subDAO. To
-view IOT earned by your Hotspot, use the [Helium Wallet app](/wallets/helium-wallet-app). 5G Hotspot
-Owners will continue earning MOBILE and will additionally begin to earn IOT.
+view IOT earned by your Hotspot, use the Helium Wallet app. 5G Hotspot Owners will continue earning
+MOBILE and will additionally begin to earn IOT.
 
 :::note 5G Hotspot Owners
 
@@ -52,24 +54,39 @@ before the Solana transition.
 
 ### Hotspots Become NFTs
 
-Wallet migration is required to view your Hotspot as NFT in the
-[Helium Wallet app](/wallets/helium-wallet-app).
+All Helium Hotspots will be represented as NFTs on the Solana blockchain. Wallet migration is
+required to view your Hotspot NFT(s) in the Helium Wallet app.
 
-<div class="container" style={{ marginBottom: 20 }}>
+<div class="container">
   <div class="row" style={{ marginBottom: 20 }}>
     <div class="col col--6 img-center">
-      <b>Hotspot view in the Hotspot App</b>
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/hotspot-app.png')}
+      />
     </div>
     <div class="col col--6 img-center">
-      <b>Hotspot as NFT in [Helium Wallet app](/wallets/helium-wallet-app)</b>
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/hotspot-as-nft.png')}
+      />
     </div>
   </div>
   <div class="row" style={{ marginBottom: 20 }}>
     <div class="col col--6 img-center">
-      <img className="appscreen" src={useBaseUrl('img/wallets/hotspot-app.png')} />
+      <b>Hotspot in the current Helium app.</b>
     </div>
     <div class="col col--6 img-center">
-      <img className="appscreen" src={useBaseUrl('img/wallets/hotspot-as-nft.png')} />
+      <b>Hotspots NFTs in the new Helium Wallet app.</b>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col col--12 img-center">
+      <p>
+        <em>
+          Please note these images are for informational purposes only. Final design may change.
+        </em>
+      </p>
     </div>
   </div>
 </div>
@@ -81,15 +98,14 @@ Wallet migration is required to view your Hotspot as NFT in the
 > Some users may know the [Helium app](/wallets/app-wallet) as the "Helium Hotspot App" or "the blue
 > app."
 
-The existing [Helium Hotspot app](/wallets/app-wallet) will be restricted to only management of
+The existing [Helium Hotspot app](/wallets/app-wallet) will be restricted to only the management of
 Original Helium Hotspots in two phases.
 
 **Phase 1:**
 
 > ETA December 19, 2022
 
-- Hotspot App users will be migrated to use the [Helium Wallet app](/wallets/helium-wallet-app) for
-  Helium Wallet management.
+- Hotspot App users will be migrated to use the Helium Wallet app for Helium Wallet management.
 - Users can no longer onboard new Hotspots using the Helium App. All new Hotspots will be directed
   to use the Hotspot's Maker app, web dashboard, or contact email support (in the event that a Maker
   app is not available).
@@ -140,7 +156,9 @@ add new Hotspots to the network, transfer existing Hotspots, or assert locations
 
 :::
 
-## Wallet Migration Guides
+---
+
+## Wallet Migration Guide
 
 All Helium Wallets will need to be migrated to the Solana blockchain. What this means for each
 Helium Wallet type is explained below.
@@ -172,36 +190,71 @@ Helium Wallet type is explained below.
 
 ### For Helium App Users
 
-The [Helium app](/wallets/app-wallet) will require a migration to the
-[Helium Wallet app](/wallets/helium-wallet-app). Wallet migration is necessary to interact with your
-HNT, DC, MOBILE, IOT, and Hotspots on the Solana blockchain.
+The Helium app will require a migration to the Helium Wallet app. Wallet migration is necessary to
+interact with your HNT, DC, MOBILE, IOT, and Hotspots on the Solana blockchain. You can find Hotspot
+NFTs in the NFT Collectibles section once Helium on Solana goes live. Token balances are visible on
+the account page. You can also create multiple accounts in the Helium Wallet app.
 
-To start, ensure your [Helium app](/wallets/app-wallet) is updated and that you have downloaded the
-latest Helium Wallet app.
+To start, ensure your Helium app is updated and that you have downloaded the latest Helium Wallet
+app.
 
-1. Open the [Helium app](/wallets/app-wallet) (minimum v4.3.0)
-2. Tap `Start Migration` in the Wallet migration popup
-3. Confirm the Wallet account you want to import, then tap `Export to Wallet App`. The
-   [Helium Wallet app](/wallets/helium-wallet-app) will automatically open and complete the Wallet
-   migration.
-4. Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Helium Wallet App and ready
-   for the Solana migration, which will happen automatically in January 2023.
-
-You will use the [Helium Wallet app](/wallets/helium-wallet-app) moving forward. You can find
-Hotspot NFTs in the NFT Collectibles section once Helium on Solana goes live. Token balances are
-visible on the account page. You can also create multiple accounts in the
-[Helium Wallet app](/wallets/helium-wallet-app).
+<div class="container">
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--12">
+      <p>
+        <b>Step 1.</b> Open the Helium app (minimum v4.3.0)
+      </p>
+    </div>
+  </div>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6">
+      <p>
+        <b>Step 2 </b>Tap <code>Start Migration</code> in the Wallet migration popup.
+      </p>
+    </div>
+    <div class="col col--6 img-center">
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/migration-required-popup.png')}
+      />
+    </div>
+  </div>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6">
+      <p>
+        <b>Step 3.</b> Confirm the Wallet account you want to import.{' '}
+      </p>
+      <p>
+        Tap <code>Export to Wallet App</code> and the Helium Wallet app will automatically open and
+        complete the Wallet migration.
+      </p>
+    </div>
+    <div class="col col--6 img-center">
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/export-private-key-screen.png')}
+      />
+    </div>
+  </div>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--12">
+      <p>
+        <b>Step 4.</b> Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Helium
+        Wallet App and are ready for the Solana migration, which will happen automatically in
+        January 2023.
+      </p>
+    </div>
+  </div>
+</div>
 
 Your public Wallet address will change post-migration, but your private key and 12-word seed phrase
 will remain the same.
 
 ### For Helium Wallet App Users
 
-> Some users may know the [Helium Wallet app](/wallets/helium-wallet-app) as the "New Wallet app" or
-> "the black app."
+> Some users may know the Helium Wallet app as the "New Wallet app" or "the black app."
 
-To migrate to Solana, simply update your [Helium Wallet app](/wallets/helium-wallet-app) version to
-2.0.0 or newer. That’s it!
+To migrate to Solana, simply update your Helium Wallet app version to 2.0.0 or newer. That’s it!
 
 If you have Hotspots in any account, they will appear as an NFT Collectable. All other tokens and
 their balances are automatically transferred to the Solana Blockchain under the same token name.
@@ -233,22 +286,22 @@ on Solana Command Line Wallets.
 The CLI Wallet will have its feature set pared down as there are many other Solana-compatible CLI
 Wallets. The existing Helium CLI Wallet will be reduced to the following two functions:
 
-1. Export Seed Phrase to import into a Solana CLI Wallet (or the
-   [Helium Wallet app](/wallets/helium-wallet-app))
+1. Export Seed Phrase to import into a Solana CLI Wallet (or the Helium Wallet app)
 2. Display Solana Public Address (for a given set of private keys)
 
 This means common payment transactions and staking should utilize
-[Solana CLI Wallet](https://docs.solana.com/wallet-guide/cli) or the
-[Helium Wallet app](/wallets/helium-wallet-app).
+[Solana CLI Wallet](https://docs.solana.com/wallet-guide/cli) or the Helium Wallet app.
+
+---
 
 ## 12-Word And 24-Word Seed Phrases
 
-When a Helium Wallet is created with the [Helium Wallet app](/wallets/helium-wallet-app) or Helium
-Hotspot App, a 12-word or 24-word "Seed Phrase" is generated.
+When a Helium Wallet is created with the Helium Wallet app or Helium Hotspot App, a 12-word or
+24-word "Seed Phrase" is generated.
 
 Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
-while the [Helium Wallet app](/wallets/helium-wallet-app) accepts 12-word seed phrases, all new
-wallets are created with 24-word seed phrases.
+while the Helium Wallet app accepts 12-word seed phrases, all new wallets are created with 24-word
+seed phrases.
 
 Read more about Helium 12-word and 24-word here:
 
