--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -162,7 +162,7 @@ frequency plan for use in your country.
 | Argentina               | AU915          |
 | Armenia                 | EU868          |
 | Aruba                   | Unknown        |
-| Australia               | AS923/AU915 dualplan         |
+| Australia               | AS923-1/AU915 dualplan       |
 | Austria                 | EU868          |
 | Azerbaijan              | EU433          |
 
@@ -206,13 +206,13 @@ frequency plan for use in your country.
 | Chad                     | Unknown        |
 | Chile                    | AU915          |
 | China                    | CN470          |
-| Christmas Island         | AU915          |
-| Cocos [Keeling] Islands  | AU915          |
+| Christmas Island         | AS923-1/AU915 dualplan       |
+| Cocos [Keeling] Islands  | AS923-1/AU915 dualplan       |
 | Colombia                 | AU915          |
 | Comoros                  | EU868          |
 | Congo [DRC]              | Unknown        |
 | Congo [Republic]         | Unknown        |
-| Cook Islands             | AU915          |
+| Cook Islands             | AS923-1/AU915 dualplan       |
 | Costa Rica               | AS923_1        |
 | Côte d'Ivoire            | EU868          |
 | Croatia                  | EU868          |
@@ -283,7 +283,7 @@ frequency plan for use in your country.
 | Country                           | Frequency Plan |
 | --------------------------------- | -------------- |
 | Haiti                             | Unknown        |
-| Heard Island and McDonald Islands | AU915          |
+| Heard Island and McDonald Islands | AS923-1/AU915 dualplan       |
 | Honduras                          | AU915          |
 | Hong Kong                         | AS923_1        |
 | Hungary                           | EU868          |
@@ -374,12 +374,12 @@ frequency plan for use in your country.
 | Netherlands              | EU868          |
 | Netherlands Antilles     | EU868          |
 | New Caledonia            | EU868          |
-| New Zealand              | AU915          |
+| New Zealand              | AS923-1/AU915 dualplan       |
 | Nicaragua                | AU915          |
 | Niger                    | IN865          |
 | Nigeria                  | EU868          |
-| Niue                     | AU915          |
-| Norfolk Island           | AU915          |
+| Niue                     | AS923-1/AU915 dualplan       |
+| Norfolk Island           | AS923-1/AU915 dualplan       |
 | North Korea              | Unknown        |
 | Northern Mariana Islands | US915          |
 | Norway                   | EU868          |
@@ -398,7 +398,7 @@ frequency plan for use in your country.
 | Palau                   | Unknown        |
 | Palestinian Territories | Unknown        |
 | Panama                  | AU915          |
-| Papua New Guinea        | AU915          |
+| Papua New Guinea        | AS923-1/AU915 dualplan       |
 | Paraguay                | AU915          |
 | Peru                    | AU915          |
 | Philippines             | AS923_3        |
@@ -471,7 +471,7 @@ frequency plan for use in your country.
 | Thailand                 | AS923_1        |
 | Timor-Leste              | Unknown        |
 | Togo                     | EU433          |
-| Tokelau                  | AU915          |
+| Tokelau                  | AS923-1/AU915 dualplan       |
 | Tonga                    | AU915          |
 | Trinidad and Tobago      | AU915          |
 | Tunisia                  | EU868          |
