--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -286,7 +286,7 @@ on Solana Command Line Wallets.
 The CLI Wallet will have its feature set pared down as there are many other Solana-compatible CLI
 Wallets. The existing Helium CLI Wallet will be reduced to the following two functions:
 
-1. Export Seed Phrase to import into a Solana CLI Wallet (or the Helium Wallet app)
+1. Export Seed Phrase or private key to import into a Solana CLI Wallet (or the Helium Wallet app)
 2. Display Solana Public Address (for a given set of private keys)
 
 This means common payment transactions and staking should utilize
