--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -237,7 +237,7 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 For the first seven days after Helium's migration onto Solana, there will be a 3x bonus for new veHNT
 stakers.
 
-New stakers are only eligible to receive this 3x veHNT bonus during the initial seven-day "Genesis" period. HNT staked after this period will receive veHNT at the normal 1x rate.
+New stakers are only eligible to receive this a veHNT bonus during the initial seven-day "Genesis" period. HNT staked after this period will receive veHNT at the normal rate.
 
 For example:
 
