line wrap formatting

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -234,18 +234,21 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 
 ### Is There a Staking "Genesis" Period?
 
-For the first seven days after Helium's migration onto Solana, there will be a 3x bonus for new veHNT
-stakers.
+For the first seven days after Helium's migration onto Solana, there will be a 3x bonus for new
+veHNT stakers.
 
-New stakers are only eligible to receive this a veHNT bonus during the initial seven-day "Genesis" period. HNT staked after this period will receive veHNT at the normal rate.
+New stakers are only eligible to receive this a veHNT bonus during the initial seven-day "Genesis"
+period. HNT staked after this period will receive veHNT at the normal rate.
 
 For example:
 
-> Staking 10 HNT during this "Genesis" period with a lock duration of six months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT at the end of
-> the staking period, and 10 HNT is returned to the wallet.
+> Staking 10 HNT during this "Genesis" period with a lock duration of six months gets 30 veHNT
+> (10x1x3) that decays from 30 to 0 veHNT at the end of the staking period, and 10 HNT is returned
+> to the wallet.
 
-> Staking 20 HNT during this "Genesis" period with a lock duration of 24 months returns 2598 veHNT (20x43.3x3), and these decay to 0 veHNT at the end
-> of the staking period, and 20 HNT is returned to the wallet.
+> Staking 20 HNT during this "Genesis" period with a lock duration of 24 months returns 2598 veHNT
+> (20x43.3x3), and these decay to 0 veHNT at the end of the staking period, and 20 HNT is returned
+> to the wallet.
 
 Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus applied if
 they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend the
