remove dualplan reference

--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -162,7 +162,7 @@ frequency plan for use in your country.
 | Argentina               | AU915                  |
 | Armenia                 | EU868                  |
 | Aruba                   | Unknown                |
-| Australia               | AS923-1/AU915 dualplan |
+| Australia               | AS923-1                |
 | Austria                 | EU868                  |
 | Azerbaijan              | EU433                  |
 
@@ -206,13 +206,13 @@ frequency plan for use in your country.
 | Chad                     | Unknown                |
 | Chile                    | AU915                  |
 | China                    | CN470                  |
-| Christmas Island         | AS923-1/AU915 dualplan |
-| Cocos [Keeling] Islands  | AS923-1/AU915 dualplan |
+| Christmas Island         | AS923-1                |
+| Cocos [Keeling] Islands  | AS923-1                |
 | Colombia                 | AU915                  |
 | Comoros                  | EU868                  |
 | Congo [DRC]              | Unknown                |
 | Congo [Republic]         | Unknown                |
-| Cook Islands             | AS923-1/AU915 dualplan |
+| Cook Islands             | AS923-1                |
 | Costa Rica               | AS923_1                |
 | Côte d'Ivoire            | EU868                  |
 | Croatia                  | EU868                  |
@@ -283,7 +283,7 @@ frequency plan for use in your country.
 | Country                           | Frequency Plan         |
 | --------------------------------- | ---------------------- |
 | Haiti                             | Unknown                |
-| Heard Island and McDonald Islands | AS923-1/AU915 dualplan |
+| Heard Island and McDonald Islands | AS923-1                |
 | Honduras                          | AU915                  |
 | Hong Kong                         | AS923_1                |
 | Hungary                           | EU868                  |
@@ -374,12 +374,12 @@ frequency plan for use in your country.
 | Netherlands              | EU868                  |
 | Netherlands Antilles     | EU868                  |
 | New Caledonia            | EU868                  |
-| New Zealand              | AS923-1/AU915 dualplan |
+| New Zealand              | AS923-1                |
 | Nicaragua                | AU915                  |
 | Niger                    | IN865                  |
 | Nigeria                  | EU868                  |
-| Niue                     | AS923-1/AU915 dualplan |
-| Norfolk Island           | AS923-1/AU915 dualplan |
+| Niue                     | AS923-1                |
+| Norfolk Island           | AS923-1                |
 | North Korea              | Unknown                |
 | Northern Mariana Islands | US915                  |
 | Norway                   | EU868                  |
@@ -398,7 +398,7 @@ frequency plan for use in your country.
 | Palau                   | Unknown                |
 | Palestinian Territories | Unknown                |
 | Panama                  | AU915                  |
-| Papua New Guinea        | AS923-1/AU915 dualplan |
+| Papua New Guinea        | AS923-1                |
 | Paraguay                | AU915                  |
 | Peru                    | AU915                  |
 | Philippines             | AS923_3                |
@@ -471,7 +471,7 @@ frequency plan for use in your country.
 | Thailand                 | AS923_1                |
 | Timor-Leste              | Unknown                |
 | Togo                     | EU433                  |
-| Tokelau                  | AS923-1/AU915 dualplan |
+| Tokelau                  | AS923-1                |
 | Tonga                    | AU915                  |
 | Trinidad and Tobago      | AU915                  |
 | Tunisia                  | EU868                  |
