add AS923_1, AU915_SB1, AU915_SB6

--- a/docs/lorawan-on-helium/frequency-plans/country-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/country-plans.mdx
@@ -28,16 +28,16 @@ frequency plan for use in your country.
 | American Samoa          | US915                  |
 | Andorra                 | EU868                  |
 | Angola                  | Unknown                |
-| Anguilla                | AU915                  |
-| Antarctica - Chilean    | AU915                  |
-| Antarctica - Australian | AU915                  |
-| Antarctica - British    | EU868                  |
-| Antarctica - Argentine  | AU915                  |
+| Anguilla                | AU915_SB1              |
+| Antarctica - Chilean    | Unknown                |
+| Antarctica - Australian | Unknown                |
+| Antarctica - British    | Unknown                |
+| Antarctica - Argentine  | Unknown                |
 | Antigua and Barbuda     | Unknown                |
-| Argentina               | AU915                  |
+| Argentina               | AU915_SB1              |
 | Armenia                 | EU868                  |
 | Aruba                   | Unknown                |
-| Australia               | AS923-1                |
+| Australia               | AS923_1                |
 | Austria                 | EU868                  |
 | Azerbaijan              | EU433                  |
 
@@ -48,10 +48,10 @@ frequency plan for use in your country.
 | Bahamas                         | US915          |
 | Bahrain                         | EU868          |
 | Bangladesh                      | AS923_1        |
-| Barbados                        | AU915          |
+| Barbados                        | AU915_SB1      |
 | Belarus                         | EU868          |
 | Belgium                         | EU868          |
-| Belize                          | AU915          |
+| Belize                          | AU915_SB1      |
 | Benin                           | EU868          |
 | Bermuda                         | US915          |
 | Bhutan                          | EU868          |
@@ -60,9 +60,9 @@ frequency plan for use in your country.
 | Bosnia and Herzegovina          | EU868          |
 | Botswana                        | EU868          |
 | Bouvet Island                   | EU868          |
-| Brazil                          | AU915          |
+| Brazil                          | AU915_SB1      |
 | British Indian Ocean Territory  | Unknown        |
-| British Virgin Islands          | AU915          |
+| British Virgin Islands          | AU915_SB1      |
 | Brunei                          | AS923_1        |
 | Bulgaria                        | EU868          |
 | Burkina Faso                    | Unknown        |
@@ -79,15 +79,15 @@ frequency plan for use in your country.
 | Cayman Islands           | US915                  |
 | Central African Republic | Unknown                |
 | Chad                     | Unknown                |
-| Chile                    | AU915                  |
+| Chile                    | AU915_SB1              |
 | China                    | CN470                  |
-| Christmas Island         | AS923-1                |
-| Cocos [Keeling] Islands  | AS923-1                |
-| Colombia                 | AU915                  |
+| Christmas Island         | AS923_1                |
+| Cocos [Keeling] Islands  | AS923_1                |
+| Colombia                 | AU915_SB1              |
 | Comoros                  | EU868                  |
 | Congo [DRC]              | Unknown                |
 | Congo [Republic]         | Unknown                |
-| Cook Islands             | AS923-1                |
+| Cook Islands             | AS923_1                |
 | Costa Rica               | AS923_1                |
 | Côte d'Ivoire            | EU868                  |
 | Croatia                  | EU868                  |
@@ -102,16 +102,16 @@ frequency plan for use in your country.
 | ------------------ | -------------- |
 | Denmark            | EU868          |
 | Djibouti           | Unknown        |
-| Dominica           | AU915          |
-| Dominican Republic | AU915          |
+| Dominica           | AU915_SB1      |
+| Dominican Republic | AU915_SB1      |
 
 #### E <a id="e"></a>
 
 | Country              | Frequency Plan |
 | -------------------- | -------------- |
-| Ecuador              | AU915          |
+| Ecuador              | AU915_SB1      |
 | Egypt                | EU868          |
-| El Salvador          | AU915          |
+| El Salvador          | AU915_SB1      |
 | Equatorial Guinea    | EU868          |
 | Eritrea              | Unknown        |
 | Estonia              | EU868          |
@@ -144,10 +144,10 @@ frequency plan for use in your country.
 | Gibraltar     | EU868          |
 | Greece        | EU868          |
 | Greenland     | EU868          |
-| Grenada       | AU915          |
+| Grenada       | AU915_SB1      |
 | Guadeloupe    | EU868          |
 | Guam          | US915          |
-| Guatemala     | AU915          |
+| Guatemala     | AU915_SB1      |
 | Guernsey      | EU868          |
 | Guinea        | EU433          |
 | Guinea-Bissau | Unknown        |
@@ -158,8 +158,8 @@ frequency plan for use in your country.
 | Country                           | Frequency Plan         |
 | --------------------------------- | ---------------------- |
 | Haiti                             | Unknown                |
-| Heard Island and McDonald Islands | AS923-1                |
-| Honduras                          | AU915                  |
+| Heard Island and McDonald Islands | AS923_1                |
+| Honduras                          | AU915_SB1              |
 | Hong Kong                         | AS923_1                |
 | Hungary                           | EU868                  |
 
@@ -181,7 +181,7 @@ frequency plan for use in your country.
 
 | Country | Frequency Plan |
 | ------- | -------------- |
-| Jamaica | AU915          |
+| Jamaica | AU915_SB1      |
 | Japan   | AS923_1        |
 | Jersey  | EU868          |
 | Jordan  | IN865          |
@@ -234,7 +234,7 @@ frequency plan for use in your country.
 | Monaco           | EU868          |
 | Mongolia         | Unknown        |
 | Montenegro       | EU868          |
-| Montserrat       | AU915          |
+| Montserrat       | AU915_SB1      |
 | Morocco          | EU433          |
 | Mozambique       | Unknown        |
 | Myanmar [Burma]  | AS923_1        |
@@ -249,12 +249,12 @@ frequency plan for use in your country.
 | Netherlands              | EU868                  |
 | Netherlands Antilles     | EU868                  |
 | New Caledonia            | EU868                  |
-| New Zealand              | AS923-1                |
-| Nicaragua                | AU915                  |
+| New Zealand              | AS923_1                |
+| Nicaragua                | AU915_SB1              |
 | Niger                    | IN865                  |
 | Nigeria                  | EU868                  |
-| Niue                     | AS923-1                |
-| Norfolk Island           | AS923-1                |
+| Niue                     | AS923_1                |
+| Norfolk Island           | AS923_1                |
 | North Korea              | Unknown                |
 | Northern Mariana Islands | US915                  |
 | Norway                   | EU868                  |
@@ -272,10 +272,10 @@ frequency plan for use in your country.
 | Pakistan                | AS923                  |
 | Palau                   | Unknown                |
 | Palestinian Territories | Unknown                |
-| Panama                  | AU915                  |
-| Papua New Guinea        | AS923-1                |
-| Paraguay                | AU915                  |
-| Peru                    | AU915                  |
+| Panama                  | AU915_SB1              |
+| Papua New Guinea        | AS923_1                |
+| Paraguay                | AU915_SB1              |
+| Peru                    | AU915_SB1              |
 | Philippines             | AS923_3                |
 | Pitcairn Islands        | Unknown                |
 | Poland                  | EU868                  |
@@ -304,11 +304,11 @@ frequency plan for use in your country.
 | Sahrawi Arab Democratic Republic             | Unknown        |
 | Saint Barthelemy                             | EU868          |
 | Saint Helena                                 | Unknown        |
-| Saint Kitts and Nevis                        | AU915          |
-| Saint Lucia                                  | AU915          |
+| Saint Kitts and Nevis                        | AU915_SB1      |
+| Saint Lucia                                  | AU915_SB1      |
 | Saint Martin                                 | EU868          |
 | Saint Pierre and Miquelon                    | EU868          |
-| Saint Vincent and the Grenadines             | AU915          |
+| Saint Vincent and the Grenadines             | AU915_SB1      |
 | Samoa                                        | EU868          |
 | San Marino                                   | EU868          |
 | São Tomé and Príncipe                        | Unknown        |
@@ -329,7 +329,7 @@ frequency plan for use in your country.
 | Spain                                        | EU868          |
 | Sri Lanka                                    | AS923_1        |
 | Sudan                                        | Unknown        |
-| Suriname                                     | AU915          |
+| Suriname                                     | AU915_SB1      |
 | Svalbard and Jan Mayen                       | EU868          |
 | Swaziland see Eswatini                       | -              |
 | Sweden                                       | EU868          |
@@ -346,13 +346,13 @@ frequency plan for use in your country.
 | Thailand                 | AS923_1                |
 | Timor-Leste              | Unknown                |
 | Togo                     | EU433                  |
-| Tokelau                  | AS923-1                |
-| Tonga                    | AU915                  |
-| Trinidad and Tobago      | AU915                  |
+| Tokelau                  | AS923_1                |
+| Tonga                    | AU915_SB1              |
+| Trinidad and Tobago      | AU915_SB1              |
 | Tunisia                  | EU868                  |
 | Turkey                   | EU868                  |
 | Turkmenistan             | Unknown                |
-| Turks and Caicos Islands | AU915                  |
+| Turks and Caicos Islands | AU915_SB1              |
 | Tuvalu                   | Unknown                |
 
 #### U <a id="u"></a>
@@ -361,12 +361,12 @@ frequency plan for use in your country.
 | --------------------------- | -------------- |
 | U.S. Minor Outlying Islands | US915          |
 | U.S. Virgin Islands         | US915          |
-| Uganda                      | AS923-1        |
+| Uganda                      | AS923_1        |
 | Ukraine                     | EU868          |
 | United Arab Emirates        | EU868          |
 | United Kingdom              | EU868          |
 | United States               | US915          |
-| Uruguay                     | AU915          |
+| Uruguay                     | AU915_SB1      |
 | Uzbekistan                  | EU433          |
 
 #### V <a id="v"></a>
@@ -377,7 +377,7 @@ frequency plan for use in your country.
 | Vatican City (Holy See) | EU868          |
 | Venezuela               | AS923_1        |
 | Vietnam                 | AS923_2        |
-| Virgin Islands (UK)     | AU915          |
+| Virgin Islands (UK)     | AU915_SB1      |
 
 #### W <a id="w"></a>
 
