--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -75,6 +75,27 @@ Also known as **US902-928**
 - Uplink channels 1-9 (RX1)
 - Helium uses the default parameters: 869.525 MHz / DR0 (SF12, 125 kHz)
 
+### AS923_1
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 923.2           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 923.4           | SF7BW125 to SF12BW125              |
+| 923.6           | SF7BW125 to SF12BW125              |
+| 923.8           | SF7BW125 to SF12BW125              |
+| 924.0           | SF7BW125 to SF12BW125              |
+| 924.2           | SF7BW125 to SF12BW125              |
+| 924.4           | SF7BW125 to SF12BW125              |
+| 924.6           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+
 ### CN470
 
 #### Uplink
@@ -104,21 +125,50 @@ Also known as **US902-928**
 | 508.1           | SF7BW125 to SF12BW125 (RX1) |
 | 505.3           | SF12BW125 (RX2)             |
 
-### AU915
+### AU915_SB1
 
 #### Uplink
 
 | Frequency (MHZ) | Spreading Factor      |
 | :-------------- | :-------------------- |
-| 916.8           | SF7BW125 to SF12BW125 |
-| 917.0           | SF7BW125 to SF12BW125 |
-| 917.2           | SF7BW125 to SF12BW125 |
-| 917.4           | SF7BW125 to SF12BW125 |
-| 917.6           | SF7BW125 to SF12BW125 |
-| 917.8           | SF7BW125 to SF12BW125 |
-| 918.0           | SF7BW125 to SF12BW125 |
-| 918.2           | SF7BW125 to SF12BW125 |
-| 917.5           | SF8BW500              |
+| 915.2           | SF7BW125 to SF12BW125 |
+| 915.4           | SF7BW125 to SF12BW125 |
+| 915.6           | SF7BW125 to SF12BW125 |
+| 915.8           | SF7BW125 to SF12BW125 |
+| 916.0           | SF7BW125 to SF12BW125 |
+| 916.2           | SF7BW125 to SF12BW125 |
+| 916.4           | SF7BW125 to SF12BW125 |
+| 916.6           | SF7BW125 to SF12BW125 |
+| 915.9           | SF8BW500              |
+
+#### Downlink
+
+| Frequency (MHZ) | Spreading Factor            |
+| :-------------- | :-------------------------- |
+| 923.3           | SF7BW500 to SF12BW500 (RX1) |
+| 923.9           | SF7BW500 to SF12BW500 (RX1) |
+| 924.5           | SF7BW500 to SF12BW500 (RX1) |
+| 925.1           | SF7BW500 to SF12BW500 (RX1) |
+| 925.7           | SF7BW500 to SF12BW500 (RX1) |
+| 926.3           | SF7BW500 to SF12BW500 (RX1) |
+| 926.9           | SF7BW500 to SF12BW500 (RX1) |
+| 927.5           | SF7BW500 to SF12BW500 (RX1) |
+| 923.3           | SF12BW500 (RX2)             |
+
+### AU915_SB6 (DualPlan)
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor      |
+| :-------------- | :-------------------- |
+| 923.2           | SF7BW125 to SF12BW125 |
+| 923.4           | SF7BW125 to SF12BW125 |
+| 923.6           | SF7BW125 to SF12BW125 |
+| 923.8           | SF7BW125 to SF12BW125 |
+| 924.0           | SF7BW125 to SF12BW125 |
+| 924.2           | SF7BW125 to SF12BW125 |
+| 924.4           | SF7BW125 to SF12BW125 |
+| 924.6           | SF7BW125 to SF12BW125 |
 
 #### Downlink
 
