--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -95,6 +95,105 @@ Also known as **US902-928**
 - Uplink channels 1-8 (RX1)
 - Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
 
+### AS923_1
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 923.2           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 923.4           | SF7BW125 to SF12BW125              |
+| 923.6           | SF7BW125 to SF12BW125              |
+| 923.8           | SF7BW125 to SF12BW125              |
+| 924.0           | SF7BW125 to SF12BW125              |
+| 924.2           | SF7BW125 to SF12BW125              |
+| 924.4           | SF7BW125 to SF12BW125              |
+| 924.6           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_1B (Malaysia)
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 922.0           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 922.2           | SF7BW125 to SF12BW125              |
+| 922.4           | SF7BW125 to SF12BW125              |
+| 922.6           | SF7BW125 to SF12BW125              |
+| 922.8           | SF7BW125 to SF12BW125              |
+| 923.0           | SF7BW125 to SF12BW125              |
+| 923.2           | SF7BW125 to SF12BW125              |
+| 923.4           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_2
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 921.4           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 921.6           | SF7BW125 to SF12BW125              |
+| 921.8           | SF7BW125 to SF12BW125              |
+| 922.0           | SF7BW125 to SF12BW125              |
+| 922.2           | SF7BW125 to SF12BW125              |
+| 922.4           | SF7BW125 to SF12BW125              |
+| 922.6           | SF7BW125 to SF12BW125              |
+| 922.8           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_3
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 916.6           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 916.8           | SF7BW125 to SF12BW125              |
+| 917.0           | SF7BW125 to SF12BW125              |
+| 917.2           | SF7BW125 to SF12BW125              |
+| 917.4           | SF7BW125 to SF12BW125              |
+| 917.6           | SF7BW125 to SF12BW125              |
+| 917.8           | SF7BW125 to SF12BW125              |
+| 918.0           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_4
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 917.3           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 917.5           | SF7BW125 to SF12BW125              |
+| 917.7           | SF7BW125 to SF12BW125              |
+| 917.9           | SF7BW125 to SF12BW125              |
+| 918.1           | SF7BW125 to SF12BW125              |
+| 918.3           | SF7BW125 to SF12BW125              |
+| 918.5           | SF7BW125 to SF12BW125              |
+| 918.7           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
 
 ### CN470
 
@@ -127,6 +226,8 @@ Also known as **US902-928**
 
 ### AU915_SB1
 
+- AU915 sub-band 1 (ch 0 to 7)
+
 #### Uplink
 
 | Frequency (MHZ) | Spreading Factor      |
@@ -156,6 +257,8 @@ Also known as **US902-928**
 | 923.3           | SF12BW500 (RX2)             |
 
 ### AU915_SB6 (DualPlan)
+
+- AU915 sub-band 6 (ch 40 to 47) (for DualPlan only)
 
 #### Uplink
 
