update frequency text

--- a/docs/lorawan-on-helium/frequency-plans/country-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/country-plans.mdx
@@ -9,13 +9,18 @@ slug: /lorawan-on-helium/country-plans
 Helium's LoRaWAN Network is built upon 8-channel gateways. This page will help you confirm the
 appropriate frequencies for gateway configuration for each country.
 
+The majority of countries support either EU868 (800 Mhz) or AS923 (900 Mhz) plans with the exception
+of North American continent countries that support the US915 (900 Mhz) plan.
+
 ## Frequency Plans by Country
 
-Where a frequency plan is "Unknown", none of the above Frequency Plans have been known to
-be assigned by the local telecommnications or radio authority in that country for use by LoRaWAN.
-People in those countries are enouraged to contact the Helium Foundation LoRaWAN Committee via
-`#foundation` in the Helium Community Discord to help call to action the LoRaWAN Alliance to define a
-frequency plan for use in your country.
+Where a frequency plan is "Unknown", it often means the local telecommnications or radio authority
+in that country has not yet created [Short Range Device (SRD)](https://en.wikipedia.org/wiki/Short-range_device) regulations for either the 800 Mhz or
+900 Mhz spectrum bands. Helium gateways cannot be operated in countries without valid SRD regulations.
+Contact the LoRa Alliance for further information - [LoRa Alliance](https://lora-alliance.org/contact/)
+
+Note - Helium does not support EU433 and has no plans to ever support EU433 given it is a legacy band.
+Countries with EU433 should consider regulations to support the 800 or 900 Mhz SRD bands.
 
 #### A <a id="a"></a>
 
