--- a/docs/lorawan-on-helium/frequency-plans/region-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/region-plans.mdx
@@ -1,13 +1,13 @@
 ---
-id: frequency-plans
-sidebar_label: Plans by country
-slug: /lorawan-on-helium/country-plans
+id: region-plans
+sidebar_label: Frequency Plans by Region
+slug: /lorawan-on-helium/region-plans
 ---
 
-# Frequencies Plans by country on the Helium Network
+# Frequencies by Region on the Helium Network
 
 Helium's LoRaWAN Network is built upon 8-channel gateways. This page will help you confirm the
-appropriate frequencies for gateway configuration for each country.
+appropriate frequencies for gateway configuration for each region.
 
 The majority of countries support either EU868 (800 Mhz) or AS923 (900 Mhz) plans with the exception
 of North American continent countries that support the US915 (900 Mhz) plan.
@@ -15,12 +15,14 @@ of North American continent countries that support the US915 (900 Mhz) plan.
 ## Frequency Plans by Country
 
 Where a frequency plan is "Unknown", it often means the local telecommnications or radio authority
-in that country has not yet created [Short Range Device (SRD)](https://en.wikipedia.org/wiki/Short-range_device) regulations for either the 800 Mhz or
-900 Mhz spectrum bands. Helium gateways cannot be operated in countries without valid SRD regulations.
-Contact the LoRa Alliance for further information - [LoRa Alliance](https://lora-alliance.org/contact/)
+in that country has not yet created
+[Short Range Device (SRD)](https://en.wikipedia.org/wiki/Short-range_device) regulations for either
+the 800 Mhz or 900 Mhz spectrum bands. Helium gateways cannot be operated in countries without valid
+SRD regulations. Contact the LoRa Alliance for further information -
+[LoRa Alliance](https://lora-alliance.org/contact/)
 
-Note - Helium does not support EU433 and has no plans to ever support EU433 given it is a legacy band.
-Countries with EU433 should consider regulations to support the 800 or 900 Mhz SRD bands.
+Note - Helium does not support EU433 and has no plans to ever support EU433 given it is a legacy
+band. Countries with EU433 should consider regulations to support the 800 or 900 Mhz SRD bands.
 
 #### A <a id="a"></a>
 
