Update lorawan-on-helium.mdx (#1046)
* Update lorawan-on-helium.mdx

added a comment that Class C is coming Q1

* applied line wrap

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -11,8 +11,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # LoRaWAN On Helium
 
-The LoRaWAN Network on Helium is **compatible with LoRaWAN class A devices**. However, Helium
-distinguishes itself in how it treats the LoRaWAN Network Server (LNS).
+The LoRaWAN Network on Helium is currently **compatible with LoRaWAN class A devices**. However,
+class C support is coming in 2023 Q1 and Helium distinguishes itself in how it treats the LoRaWAN
+Network Server (LNS).
 
 In typical LoRaWAN Networks, a central or regional LNS is managed by a single entity. Helium’s
 design for a decentralized network, however, means not only do we want gateways (referred to as
